--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tiptap/starter-kit": "^2.0.0-beta.220",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "swiper": "^9.0.5",
